selftest\Changes.txt

2006-02-07, Perry
 PATCH: [ 1425765 ] Add optional build argument to testdiff.pl
  Add build arguments so don't have to test all builds
 Affected:
  testdiff.pl

2006-02-03, Perry
 PATCH: [ 1423060 ] Modify perl selftest to test all 4 builds
  Test all 4 builds (not just MergeUnicodeDebug).
  Check up front that necessary programs exist: WinMerge(U).exe & diff2merge(U).exe.
  Reprint failures at end if "noisy" option.
 Affected:
  testdiff.pl

2006-01-23, Perry
 Added "/ub" flag to WinMerge invocation, to stop polluting MRU
  (and added comments explaining arguments)
 Affected:
  testdiff.pl

2006-01-23, Perry
 Added readme.txt, Changes.txt (this file).
 Added noisy_testdiff.bat (so can easily double-click to get noisy version).
 Added test files from BUG#1406950.
  u,m,w: bug1406950a.txt bug1406950b.txt

2006-01-22, Perry
 Initial version, initial files:
   testdiff.pl
   subdir m: 
    t001a.txt t001b.txt t002a.txt t002b.txt t003a.txt t003b.txt
    t004a.txt t004b.txt
   subdir u: 
    t001a.txt t001b.txt t002a.txt t002b.txt t003a.txt t003b.txt
    t004a.txt t004b.txt
   subdir w:
    t001a.txt t001b.txt t002a.txt t002b.txt  t003a.txtt003b.txt
    t004a.txt t004b.txt